--- a/documentation/index.html
+++ b/documentation/index.html
@@ -63,7 +63,8 @@ $ npm run start
 $ npm run start:dev
 
 # production mode
-$ npm run start:prod</code></pre></div><h2>Test</h2>
+$ npm run start:prod</code></pre></div><h3>Get documentation</h3>
+<div><pre class="line-numbers"><code class="language-bash">$ npx &#64;compodoc/compodoc -p tsconfig.json -s</code></pre></div><h2>Test</h2>
 <div><pre class="line-numbers"><code class="language-bash"># unit tests
 $ npm run test
 
