:wrench: doc & npm dov

--- a/documentation/controllers/GradeController.html
+++ b/documentation/controllers/GradeController.html
@@ -427,7 +427,7 @@
   Put,
   UseGuards,
 } from &#x27;@nestjs/common&#x27;;
-import { GradeService } from &#x27;src/services/grade.service&#x27;;
+import { GradeService } from &#x27;../../services/grade.service&#x27;;
 import { AuthGuard } from &#x27;@nestjs/passport&#x27;;
 
 @Controller(&#x27;commun/grade&#x27;)
