--- a/documentation/index.html
+++ b/documentation/index.html
@@ -53,7 +53,7 @@
   [![Sponsors on Open Collective](https://opencollective.com/nest/sponsors/badge.svg)](https://opencollective.com/nest#sponsor)-->
 
 <h2>Description</h2>
-<p><a href="https://github.com/nestjs/nest">Nest</a> framework TypeScript starter repository.</p>
+<p>End of year project (Webtech n4). Works with backend (default:8700), frontend (default:4350) and mobile app</p>
 <h2>Installation</h2>
 <div><pre class="line-numbers"><code class="language-bash">$ npm install</code></pre></div><h2>Running the app</h2>
 <div><pre class="line-numbers"><code class="language-bash"># development
