--- a/documentation/injectables/AdminService.html
+++ b/documentation/injectables/AdminService.html
@@ -498,7 +498,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable, NotFoundException } from &#x27;@nestjs/common&#x27;;
 import { Prisma } from &#x27;@prisma/client&#x27;;
 import { CreateAdminDto } from &#x27;src/dto/admin.dto&#x27;;
-import { PrismaService } from &#x27;src/prisma/prisma.service&#x27;;
+import { PrismaService } from &#x27;../prisma/prisma.service&#x27;;
 
 @Injectable()
 export class AdminService {
