--- a/documentation/injectables/GradeService.html
+++ b/documentation/injectables/GradeService.html
@@ -424,7 +424,7 @@
 import { Prisma } from &#x27;@prisma/client&#x27;;
 import { CreateAdminDto } from &#x27;src/dto/admin.dto&#x27;;
 import * as bcrypt from &#x27;bcryptjs&#x27;;
-import { PrismaService } from &#x27;src/prisma/prisma.service&#x27;;
+import { PrismaService } from &#x27;../prisma/prisma.service&#x27;;
 
 @Injectable()
 export class GradeService {
