--- a/documentation/injectables/LessonService.html
+++ b/documentation/injectables/LessonService.html
@@ -462,7 +462,7 @@
 
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Injectable, NotFoundException } from &#x27;@nestjs/common&#x27;;
-import { PrismaService } from &#x27;src/prisma/prisma.service&#x27;;
+import { PrismaService } from &#x27;../prisma/prisma.service&#x27;;
 import { Prisma } from &#x27;@prisma/client&#x27;;
 
 @Injectable()
