--- a/documentation/modules/GradeModule.html
+++ b/documentation/modules/GradeModule.html
@@ -162,7 +162,7 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Module } from &#x27;@nestjs/common&#x27;;
 import { GradeController } from &#x27;./grade.controller&#x27;;
-import { GradeService } from &#x27;src/services/grade.service&#x27;;
+import { GradeService } from &#x27;../../services/grade.service&#x27;;
 
 @Module({
   providers: [GradeService],
